# pepper_clf_msgs

./: CMakeLists.txt  README.md  package.xml
action/: Animation.action  FollowPerson.action  ToggleComponent.action
msg/: Choice.msg  ChoiceGroup.msg  DisplayChoice.msg
srv/: BottomCamHDImage.srv  ColorImage.srv  DepthAndColorImage.srv  MLGrasping.srv  MLSpeechRec.srv  NLP.srv  SetTTSLanguage.srv  SynchronizedSSL.srv  TranslateString.srv
