<?xml version="1.0"?>
<package>
    <name>pepper_clf_msgs</name>
    <version>0.1.13</version>
    <description>The pepper_clf_msgs package</description>
    <author email="flier@techfak.uni-bielefeld.de">Florian Lier</author>
    <maintainer email="flier@techfak.uni-bielefeld.de">Florian Lier</maintainer>
    <license>Apache 2.0</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
</package>
